# ftrl

./: CMakeLists.txt  Makefile  README  README.md  ftrl_train.cpp
src/DB/: mapDB.h  vectorDB.h  virtualDB.h
src/Trainer/: FTRL.cpp  FTRL.h
src/Unit/: modelUnit.h
src/Utils/: utils.cpp
